# smart-enjoy-suiyuan

./: .gitignore  database.sql  pom.xml
.claude/: settings.local.json
agent-server-python/: .env.example  pyproject.toml  requirements.txt  test_llm_stream.py  test_stream.py  test_stream2.py  test_stream_detail.py  test_stream_final.py
agent-server-python/app/: main.py
agent-server-python/app/agent/: graph.py
agent-server-python/app/agent/nodes/: campus_guide.py  general_chat.py  intent.py  lost_found.py  resource.py
agent-server-python/app/agent/tools/: llm.py  search.py
agent-server-python/app/api/routes/: lost_found_sync.py  mcp.py
agent-server-python/app/api/schemas/: request.py  response.py
agent-server-python/app/config/: settings.py
agent-server-python/app/core/: dependencies.py  state.py
agent-server-python/app/repositories/: lost_found_repo.py  milvus_repo.py
agent-server-python/app/services/: knowledge_base.py  lost_found_sync.py
agent-server-python/app/task/: scheduler.py
agent-server-python/app/utils/: exceptions.py  logger.py
agent-server-python/scripts/: import_data.py  import_resources.py  test.py
smart-enjoy-suiyuan-common/: pom.xml
smart-enjoy-suiyuan-entity/: pom.xml
smart-enjoy-suiyuan-server/: pom.xml
smart-enjoy-suiyuan-server/src/main/resources/: application-dev.yaml  application-prod.yaml  application-test.yaml  application.yaml  banner.txt  logback-spring.xml
smart-learning-academy-common/: pom.xml
smart-learning-academy-entity/: pom.xml
(+271 files in other folders)
